Tweak artyfx plugin name color
Signed-off-by: falkTX <falktx@falktx.com>

--- a/plugins-fixed/artyfx-bitta.lv2/modgui/stylesheet-bitta.css
+++ b/plugins-fixed/artyfx-bitta.lv2/modgui/stylesheet-bitta.css
@@ -69,6 +69,7 @@
 }
 
 .mod-pedal-artyfx-bitta .mod-plugin-name h1 {
+    color: #ddd;
     font-family:"Questrial";
     font-family:"artyfx-bitta-uranium" !important;
     font-size:32px;
