--- a/plugins-fixed/artyfx.lv2/modgui/stylesheet.css
+++ b/plugins-fixed/artyfx.lv2/modgui/stylesheet.css
@@ -48,7 +48,7 @@
 .mod-pedal-artyfx .mod-plugin-brand h1 {
     color:#292d31;
     font-family:"Nexa";
-    font-family:"artyfx-bitta-uranium" !important;
+    font-family:"artyfx-uranium" !important;
     font-size:32px;
     text-shadow:1px 2px 2px rgba(0,0,0,.5),
                 2px 4px 5px rgba(0,0,0,.5),
@@ -69,6 +69,7 @@
 }
 
 .mod-pedal-artyfx .mod-plugin-name h1 {
+    color: #ddd;
     font-family:"Questrial";
     font-family:"artyfx-uranium" !important;
     font-size:32px;
