--- a/plugins-fixed/MOD-ConvolutionLoader.lv2/modgui/stylesheet.css
+++ b/plugins-fixed/MOD-ConvolutionLoader.lv2/modgui/stylesheet.css
@@ -1,5 +1,5 @@
 
-.mod-convolution-reverb.mod-pedal {
+.mod-convolution-loader.mod-pedal {
     color: white;
     font-size: 20px;
     margin: 0;
@@ -14,12 +14,12 @@
     width: 400px;
 }
 
-.mod-convolution-reverb.mod-pedal .mod-convolution-reverb-branding {
+.mod-convolution-loader.mod-pedal .mod-convolution-loader-branding {
     height: 38px;
     text-align: center;
 }
 
-.mod-convolution-reverb.mod-pedal .mod-convolution-reverb-branding span {
+.mod-convolution-loader.mod-pedal .mod-convolution-loader-branding span {
     border: 2px solid transparent;
     border-bottom-color: #ccc;
     border-style: ridge;
@@ -29,55 +29,55 @@
     vertical-align: bottom;
 }
 
-.mod-convolution-reverb.mod-pedal .mod-control-group {
+.mod-convolution-loader.mod-pedal .mod-control-group {
     position: relative;
     z-index: 35;
 }
 
-.mod-convolution-reverb.mod-pedal .mod-enumerated-group {
+.mod-convolution-loader.mod-pedal .mod-enumerated-group {
     margin: 2px 12px;
     border: 2px #000 solid;
 }
-.mod-convolution-reverb.mod-pedal .mod-enumerated {
+.mod-convolution-loader.mod-pedal .mod-enumerated {
     font-size: 20px;
     font-weight: 400;
     line-height: 1.75;
 }
-.mod-convolution-reverb.mod-pedal .mod-enumerated .mod-enumerated-list {
+.mod-convolution-loader.mod-pedal .mod-enumerated .mod-enumerated-list {
     display: block !important;
     background-color: #2e2e2e;
     color: #e6e6e6;
     height: 320px;
     overflow: auto;
 }
-.mod-convolution-reverb.mod-pedal .mod-enumerated .mod-enumerated-list > div {
+.mod-convolution-loader.mod-pedal .mod-enumerated .mod-enumerated-list > div {
     padding: 0px 10px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
-.mod-convolution-reverb.mod-pedal .mod-enumerated .mod-enumerated-list > div.selected {
+.mod-convolution-loader.mod-pedal .mod-enumerated .mod-enumerated-list > div.selected {
     background-color: #939393;
     border-left: 10px #565656 solid;
     color: #070707;
     font-weight: bold;
 }
 
-.mod-convolution-reverb.mod-pedal .mod-enumerated .mod-enumerated-list > div:hover {
+.mod-convolution-loader.mod-pedal .mod-enumerated .mod-enumerated-list > div:hover {
     background-color: #424242;
     cursor: pointer;
 }
-.mod-convolution-reverb.mod-pedal .mod-enumerated .mod-enumerated-list > div.selected:hover {
+.mod-convolution-loader.mod-pedal .mod-enumerated .mod-enumerated-list > div.selected:hover {
     background-color: #9e9e9e;
 }
 
-.mod-convolution-reverb-info {
+.mod-convolution-loader-info {
     border: 2px #565656 solid;
     border-radius: 6px;
     background-color: #000;
     margin: 2px 12px;
 }
-.mod-convolution-reverb-info .file-info-details {
+.mod-convolution-loader-info .file-info-details {
     font-size: 22px;
     margin-left: 4px;
     padding: 2px 0px;
@@ -86,17 +86,17 @@
     white-space: nowrap;
 }
 
-.mod-convolution-reverb-controls {
+.mod-convolution-loader-controls {
     padding: 2px;
     padding-top: 4px;
 }
 
-.mod-convolution-reverb-controls .title {
+.mod-convolution-loader-controls .title {
     font-size: 16px;
     font-weight: bold;
 }
 
-.mod-convolution-reverb.mod-pedal .mod-knob {
+.mod-convolution-loader.mod-pedal .mod-knob {
     width: 60px;
     height: 115px;
     cursor: pointer;
@@ -104,16 +104,16 @@
     position: absolute;
     bottom: 12px;
 }
-.mod-convolution-reverb.mod-pedal .mod-knob.mod-convolution-reverb-hpf {
+.mod-convolution-loader.mod-pedal .mod-knob.mod-convolution-loader-hpf {
     left: 40px;
 }
-.mod-convolution-reverb.mod-pedal .mod-knob.mod-convolution-reverb-drylevel {
+.mod-convolution-loader.mod-pedal .mod-knob.mod-convolution-loader-drylevel {
     left: 130px;
 }
-.mod-convolution-reverb.mod-pedal .mod-knob.mod-convolution-reverb-wetlevel {
+.mod-convolution-loader.mod-pedal .mod-knob.mod-convolution-loader-wetlevel {
     left: 220px;
 }
-.mod-convolution-reverb.mod-pedal .mod-knob-image {
+.mod-convolution-loader.mod-pedal .mod-knob-image {
     background-image:url(/resources/knob.png{{{ns}}});
     background-position: left center;
     background-repeat: no-repeat;
@@ -125,12 +125,12 @@
     overflow: hidden;
 }
 
-.mod-convolution-reverb.mod-pedal .mod-knob-current-value {
+.mod-convolution-loader.mod-pedal .mod-knob-current-value {
     font-size: 16px;
     white-space: nowrap;
 }
 
-.mod-convolution-reverb.mod-pedal .mod-footswitch {
+.mod-convolution-loader.mod-pedal .mod-footswitch {
     background-image: url(/resources/footswitch.png{{{ns}}});
     background-position: top center;
     background-repeat: no-repeat;
@@ -142,11 +142,11 @@
     bottom: 22px;
     right: 25px;
 }
-.mod-convolution-reverb.mod-pedal .mod-footswitch.off {
+.mod-convolution-loader.mod-pedal .mod-footswitch.off {
     background-position: bottom center;
 }
 
-.mod-convolution-reverb.mod-pedal .mod-light {
+.mod-convolution-loader.mod-pedal .mod-light {
     background-image: url(/resources/red-light-on.png{{{ns}}});
     background-position: top center;
     background-repeat: no-repeat;
@@ -157,6 +157,6 @@
     bottom: 90px;
     right: 44px;
 }
-.mod-convolution-reverb.mod-pedal .mod-light.off {
+.mod-convolution-loader.mod-pedal .mod-light.off {
     background-image: url(/resources/red-light-off.png{{{ns}}});
 }
